--- a/Source/OxyPlot.Pdf/OxyPlot.Pdf_SL4.csproj
+++ b/Source/OxyPlot.Pdf/OxyPlot.Pdf_SL4.csproj
@@ -62,6 +62,7 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="NamespaceDoc.cs" />
+    <Compile Include="PdfSharpExtensions.cs" />
     <Compile Include="PdfExporter.cs" />
     <Compile Include="PdfRenderContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
