Breaking change: Changed OxyColor to value type [issue:10037].
Replace OxyColor==null references by OxyColors.Undefined (no color) or
OxyColors.Automatic (OxyPlot will suggest a color).

Added IsUndefined, IsAutomatic and IsVisible methods to OxyColor.

Changed version number to 2013.2

--- a/Source/OxyPlot.Wpf/OxyPlot.Wpf_NET35.csproj
+++ b/Source/OxyPlot.Wpf/OxyPlot.Wpf_NET35.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Helpers\WeakEvents\RenderingEventManager.cs" />
     <Compile Include="Helpers\WeakEvents\WeakEventListenerT.cs" />
     <Compile Include="Helpers\WeakEvents\WeakEventManagerBaseT.cs" />
+    <Compile Include="MoreColors.cs" />
     <Compile Include="NamespaceDoc.cs" />
     <None Include="Plot.TouchEvents.cs" />
     <Compile Include="RenderingControl.cs" />
