--- a/Source/packages/repositories.config
+++ b/Source/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\Examples\WPF\WorldStatisticsDemo\packages.config" />
   <repository path="..\Examples\WPF\WpfExamples\packages.config" />
   <repository path="..\OxyPlot.Pdf.Tests\packages.config" />
+  <repository path="..\OxyPlot.Pdf\packages.config" />
   <repository path="..\OxyPlot.Tests\packages.config" />
   <repository path="..\OxyPlot.Wpf.Tests\packages.config" />
 </repositories>
