--- a/Source/Examples/WPF/ExportDemo/packages.config
+++ b/Source/Examples/WPF/ExportDemo/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PropertyTools.Wpf" version="2012.2.1.55" />
-  <package id="Caliburn.Micro" version="1.3.1" />
+  <package id="Caliburn.Micro" version="1.5.2" targetFramework="net45" />
+  <package id="PropertyTools.Wpf" version="2013.1.17.1" targetFramework="net45" />
 </packages>
