--- a/Source/Examples/WPF/WpfExamples/packages.config
+++ b/Source/Examples/WPF/WpfExamples/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PropertyTools.Wpf" version="2012.2.1.55" />
+  <package id="PropertyTools.Wpf" version="2013.1.17.1" targetFramework="net45" />
 </packages>
