--- a/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
+++ b/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
@@ -7,7 +7,7 @@
     <owners>Oystein Bjorke</owners>
     <licenseUrl>http://oxyplot.codeplex.com/license</licenseUrl>
     <projectUrl>http://oxyplot.codeplex.com/</projectUrl>
-    <iconUrl>http://www.objo.net/codeplex/icons/oxyplot.png</iconUrl>
+    <iconUrl>http://oxyplot.org/icons/oxyplot_128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>OxyPlot is an open source plotting library for .NET.</description>
     <language>en-US</language>
