--- a/Source/OxyPlot/OxyPlot.csproj
+++ b/Source/OxyPlot/OxyPlot.csproj
@@ -43,8 +43,6 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Annotations\NamespaceDoc.cs" />
-    <Compile Include="Axes\NamespaceDoc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LibraryDoc.cs" />
     <Compile Include="NamespaceDoc.cs" />
@@ -83,6 +81,17 @@
     <Compile Include="Foundation\DataPoint.cs" />
     <Compile Include="Foundation\MarkerType.cs" />
     <Compile Include="Foundation\LineStyle.cs" />
+    <Compile Include="Pdf\FontSubType.cs" />
+    <Compile Include="Pdf\PortableDocumentExtensions.cs" />
+    <Compile Include="Pdf\PortableDocumentFont.cs" />
+    <Compile Include="Pdf\PortableDocumentFontFamily.cs" />
+    <Compile Include="Pdf\PortableDocumentImage.cs" />
+    <Compile Include="Pdf\PdfExporter.cs" />
+    <Compile Include="Pdf\PdfRenderContext.cs" />
+    <Compile Include="Pdf\PdfWriter.cs" />
+    <Compile Include="Pdf\PortableDocument.cs" />
+    <Compile Include="Pdf\PortableDocumentImageUtilities.cs" />
+    <Compile Include="Pdf\StandardFonts.cs" />
     <Compile Include="Series\NamespaceDoc.cs" />
     <Compile Include="Utilities\XmlWriterBase.cs" />
     <Compile Include="Utilities\BinaryReaderExtensions.cs" />
@@ -104,6 +113,7 @@
     <Compile Include="Svg\SvgRenderContext.cs" />
     <Compile Include="Svg\SvgWriter.cs" />
     <Compile Include="Svg\SvgExporter.cs" />
+    <Compile Include="Annotations\NamespaceDoc.cs" />
     <Compile Include="Annotations\RectangleAnnotation.cs" />
     <Compile Include="Annotations\TextAnnotation.cs" />
     <Compile Include="Annotations\PolygonAnnotation.cs" />
@@ -121,6 +131,7 @@
     <Compile Include="Annotations\PathAnnotation.cs" />
     <Compile Include="Annotations\PolylineAnnotation.cs" />
     <Compile Include="Annotations\TileMapAnnotation.cs" />
+    <Compile Include="Axes\NamespaceDoc.cs" />
     <Compile Include="Axes\LogarithmicAxis.cs" />
     <Compile Include="Axes\ColorAxis.cs" />
     <Compile Include="Axes\RangeColorAxis.cs" />
@@ -242,6 +253,9 @@
     <None Include="ClassDiagrams\PlotModel.cd" />
     <None Include="ClassDiagrams\Reporting.cd" />
     <None Include="OxyPlot.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Pdf\ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
