Rename Android and iOS projects and namespaces

--- a/Source/OxyPlot.XamarinAndroid/OxyPlot.MonoForAndroid.csproj
+++ b/Source/OxyPlot.XamarinAndroid/OxyPlot.MonoForAndroid.csproj
@@ -7,8 +7,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OxyPlot.MonoForAndroid</RootNamespace>
-    <AssemblyName>OxyPlot.MonoForAndroid</AssemblyName>
+    <RootNamespace>OxyPlot.XamarinAndroid</RootNamespace>
+    <AssemblyName>OxyPlot.XamarinAndroid</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidSupportedAbis>armeabi</AndroidSupportedAbis>
