--- a/Source/OxyPlot.XamarinIOS/OxyPlot.MonoTouch.csproj
+++ b/Source/OxyPlot.XamarinIOS/OxyPlot.MonoTouch.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{7DCF07B1-B8BD-4EF0-B1FC-2AAC4466B6C6}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <RootNamespace>OxyPlot.MonoTouch</RootNamespace>
-    <AssemblyName>OxyPlot.MonoTouch</AssemblyName>
+    <RootNamespace>OxyPlot.XamarinIOS</RootNamespace>
+    <AssemblyName>OxyPlot.XamarinIOS</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,11 +33,11 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
-    <Reference Include="monotouch" />
+    <Reference Include="XamarinIOS" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="MonoTouchRenderContext.cs" />
+    <Compile Include="XamarinIOSRenderContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OxyPlot\OxyPlotMT.csproj">
