PdfWriter: corrected compiler error for NET 3.5

--- a/Source/OxyPlot/OxyPlot_NET35.csproj
+++ b/Source/OxyPlot/OxyPlot_NET35.csproj
@@ -19,7 +19,7 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\NET35\Debug\</OutputPath>
     <IntermediateOutputPath>obj\Debug\NET35\</IntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -28,7 +28,7 @@
     <Optimize>true</Optimize>
     <OutputPath>..\..\Output\NET35\</OutputPath>
     <IntermediateOutputPath>obj\Release\NET35\</IntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\Output\NET35\OxyPlot.xml</DocumentationFile>
@@ -115,6 +115,16 @@
     <Compile Include="Imaging\Png\PngEncoder.cs" />
     <Compile Include="Imaging\Png\PngEncoderOptions.cs" />
     <None Include="Imaging\Jpeg\JpegDecoder.cs" />
+    <Compile Include="Imaging\Deflate\Arrays.cs" />
+    <Compile Include="Imaging\Deflate\BitReader.cs" />
+    <Compile Include="Imaging\Deflate\ByteBitReader.cs" />
+    <Compile Include="Imaging\Deflate\CanonicalCode.cs" />
+    <Compile Include="Imaging\Deflate\CircularDictionary.cs" />
+    <Compile Include="Imaging\Deflate\CodeTree.cs" />
+    <Compile Include="Imaging\Deflate\Deflate.cs" />
+    <Compile Include="Imaging\Deflate\InternalNode.cs" />
+    <Compile Include="Imaging\Deflate\Leaf.cs" />
+    <Compile Include="Imaging\Deflate\Node.cs" />
     <Compile Include="Svg\SvgRenderContext.cs" />
     <Compile Include="Svg\SvgWriter.cs" />
     <Compile Include="Svg\SvgExporter.cs" />
