--- a/Source/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.csproj
+++ b/Source/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.csproj
@@ -33,7 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
-    <Reference Include="XamarinIOS" />
+    <Reference Include="monotouch" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
