Use PCL libraries in Xamarin solutions

--- a/Source/OxyPlot.XamarinAndroid/OxyPlot.XamarinAndroid.csproj
+++ b/Source/OxyPlot.XamarinAndroid/OxyPlot.XamarinAndroid.csproj
@@ -53,12 +53,6 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\OxyPlot\OxyPlotMfA.csproj">
-      <Project>{08A91765-2C9D-4D2B-B56D-FAE62AB204CC}</Project>
-      <Name>OxyPlotMfA</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -67,4 +61,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <ProjectReference Include="..\OxyPlot\OxyPlot.csproj">
+      <Project>{7A0B35C0-DD17-4964-8E9A-44D6CECDC692}</Project>
+      <Name>OxyPlot</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
