--- a/Source/Examples/XamarinIOS/MonoTouch.Demo/MonoTouch.Demo.csproj
+++ b/Source/Examples/XamarinIOS/MonoTouch.Demo/MonoTouch.Demo.csproj
@@ -94,17 +94,17 @@
     <Content Include="Images\Icon72x72.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ExampleLibrary\ExampleLibraryMT.csproj">
-      <Project>{FACB89E5-53A5-4748-9F5B-E0714EBB37B2}</Project>
-      <Name>ExampleLibraryMT</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\OxyPlot.XamarinIOS\OxyPlot.XamarinIOS.csproj">
       <Project>{7DCF07B1-B8BD-4EF0-B1FC-2AAC4466B6C6}</Project>
       <Name>OxyPlot.XamarinIOS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\OxyPlot\OxyPlotMT.csproj">
-      <Project>{A9B53EF9-88CE-4934-8C8F-236ECEEA676D}</Project>
-      <Name>OxyPlotMT</Name>
+    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
+      <Project>{7A0B35C0-DD17-4964-8E9A-44D6CECDC692}</Project>
+      <Name>OxyPlot</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ExampleLibrary\ExampleLibrary.csproj">
+      <Project>{FACB89E5-53A5-4748-9F5B-E0714EBB37B2}</Project>
+      <Name>ExampleLibrary</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
