--- a/Source/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.csproj
+++ b/Source/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.csproj
@@ -40,9 +40,9 @@
     <Compile Include="XamarinIOSRenderContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OxyPlot\OxyPlotMT.csproj">
-      <Project>{A9B53EF9-88CE-4934-8C8F-236ECEEA676D}</Project>
-      <Name>OxyPlotMT</Name>
+    <ProjectReference Include="..\OxyPlot\OxyPlot.csproj">
+      <Project>{7A0B35C0-DD17-4964-8E9A-44D6CECDC692}</Project>
+      <Name>OxyPlot</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
