LinearColorAxis: add RenderAsImage property (based on pull request 5669 from levi_botelho)

--- a/Source/Examples/ExampleLibrary/ExampleLibrary_SL4.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_SL4.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Examples\BarSeries\TornadoBarSeriesExamples.cs" />
     <Compile Include="Examples\CustomAxisExamples.cs" />
     <Compile Include="Examples\HeatMapSeriesExamples.cs" />
+    <Compile Include="Examples\LinearColorAxisExamples.cs" />
     <Compile Include="Examples\MiscExamples.cs" />
     <Compile Include="Examples\MouseEventExamples.cs" />
     <Compile Include="Examples\ExamplesBase.cs" />
