--- a/Source/OxyPlot/OxyPlot_SL4.csproj
+++ b/Source/OxyPlot/OxyPlot_SL4.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Imaging\Png\PngDecoder.cs" />
     <Compile Include="Imaging\Png\PngEncoder.cs" />
     <Compile Include="Imaging\Png\PngEncoderOptions.cs" />
+    <None Include="ClassDiagrams\Axes.cd" />
     <None Include="Imaging\Jpeg\JpegDecoder.cs" />
     <Compile Include="Imaging\Deflate\Arrays.cs" />
     <Compile Include="Imaging\Deflate\BitReader.cs" />
@@ -169,7 +170,6 @@
     <Compile Include="Annotations\TileMapAnnotation.cs" />
     <Compile Include="Axes\NamespaceDoc.cs" />
     <Compile Include="Axes\LogarithmicAxis.cs" />
-    <Compile Include="Axes\ColorAxis.cs" />
     <Compile Include="Axes\RangeColorAxis.cs" />
     <Compile Include="Axes\AngleAxis.cs" />
     <Compile Include="Axes\Axis.cs" />
@@ -178,6 +178,8 @@
     <Compile Include="Axes\AxisLayer.cs" />
     <Compile Include="Axes\AxisPosition.cs" />
     <Compile Include="Axes\CategoryAxis.cs" />
+    <Compile Include="Axes\CategoryColorAxis.cs" />
+    <Compile Include="Axes\IColorAxis.cs" />
     <Compile Include="Axes\LinearColorAxis.cs" />
     <Compile Include="Axes\DateTimeAxis.cs" />
     <Compile Include="Axes\DateTimeIntervalType.cs" />
