WPF ExampleBrowser (NET 4.5): correct output folder

--- a/Source/Examples/WPF/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/WPF/ExampleBrowser/ExampleBrowser.csproj
@@ -24,7 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\..\Output\NET45\Examples\ExampleBrowser\</OutputPath>
+    <OutputPath>..\..\..\..\Output\NET45\Examples\ExampleBrowser\</OutputPath>
     <IntermediateOutputPath>obj\Release\NET40\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
